--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
